# cua

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.agents/skills/release/: SKILL.md
.agents/skills/update-docs/: SKILL.md
.agents/skills/update-models/: SKILL.md
.agents/skills/update-models/reference/: README.md  audit-official-examples.ts  discover-models.ts  (+3 more)
.cursor/plans/: cua-ai-agent.md
.github/workflows/: ci.yml  release-cua-agent.yml  release-cua-ai.yml  release-cua-cli.yml
benchmarks/: .gitignore  README.md  pyproject.toml
benchmarks/adapters/clawbench/: .gitignore  PARITY.md  README.md  SMOKE.md  pyproject.toml
benchmarks/adapters/clawbench/src/clawbench_adapter/: __init__.py  _upstream.py  adapter.py  agent.py  email_provider.py  main.py
benchmarks/adapters/clawbench/src/clawbench_adapter/task-template/tests/: cleanup_email.py  finalize_capture.py  interceptor.py  prepare_task.py  test.sh  verify.py
benchmarks/adapters/clawbench/tests/: conftest.py  test_adapter.py  test_agent.py  test_email_provider.py  test_interceptor.py  test_verify.py
benchmarks/adapters/online-mind2web/: .gitignore  PARITY.md  README.md  SMOKE.md  pyproject.toml
benchmarks/adapters/online-mind2web/judge/: package-lock.json  package.json  tsconfig.json  tsdown.config.ts  vitest.config.ts
benchmarks/adapters/online-mind2web/judge/src/: artifacts.ts  judge.ts  model.ts  prompts.ts  types.ts  webjudge.ts
benchmarks/adapters/online-mind2web/judge/test/: artifacts.test.ts  judge.test.ts  webjudge.test.ts
benchmarks/adapters/online-mind2web/src/online_mind2web/: __init__.py  adapter.py  main.py
benchmarks/adapters/online-mind2web/src/online_mind2web/task-template/: instruction.md  instruction.nourl.md  task.toml
benchmarks/adapters/online-mind2web/src/online_mind2web/task-template/solution/: solve.sh
benchmarks/adapters/online-mind2web/src/online_mind2web/task-template/tests/: test.sh
benchmarks/adapters/online-mind2web/tests/: test_adapter.py
benchmarks/adapters/webvoyager/: .gitignore  PARITY.md  README.md  SMOKE.md  adapter_metadata.json  pyproject.toml  run_webvoyager.yaml
benchmarks/adapters/webvoyager/judge/: package-lock.json  package.json  tsdown.config.ts
benchmarks/adapters/webvoyager/judge/src/: artifacts.ts  judge.ts  model.ts  prompts.ts  types.ts  webjudge.ts
benchmarks/adapters/webvoyager/judge/test/: artifacts.test.ts  judge.test.ts  prompts.test.ts  webjudge.test.ts
benchmarks/adapters/webvoyager/src/webvoyager/: __init__.py  adapter.py  main.py
benchmarks/adapters/webvoyager/src/webvoyager/task-template/: instruction.md  task.toml
benchmarks/adapters/webvoyager/src/webvoyager/task-template/environment/: kernel.json
benchmarks/adapters/webvoyager/src/webvoyager/task-template/solution/: solve.sh
benchmarks/adapters/webvoyager/src/webvoyager/task-template/tests/: test.sh  webjudge.py
benchmarks/adapters/webvoyager/tests/: test_adapter.py  test_webjudge.py
benchmarks/examples/: README.md
benchmarks/examples/tasks/cua-hello/: instruction.md  task.toml
benchmarks/examples/tasks/cua-hello/environment/: kernel.json
benchmarks/examples/tasks/cua-hello/tests/: test.sh
benchmarks/node/: package-lock.json  package.json  tsdown.config.ts
benchmarks/node/src/: answer.ts  sink.ts  task.ts
benchmarks/node/test/: answer.test.ts  sink.test.ts
benchmarks/src/cua_harbor/: __init__.py  agent.py  constants.py  models.py  trajectory.py
benchmarks/tests/: conftest.py  test_agent.py  test_models.py  test_trajectory.py
docs/: DESIGN.md  architecture.md  cua-cli-harness-migration.md  npm-releases.md
scripts/: append-js-extensions.mjs
skills/cua-cli/: SKILL.md
