[project]
name = "cua-harbor"
version = "0.1.0"
description = "Harbor agent that drives the cua harness against the Kernel environment"
requires-python = ">=3.12"
dependencies = ["harbor[kernel]"]

[tool.uv.sources]
harbor = { git = "https://github.com/kernel/harbor.git", branch = "hypeship/kernel-environment" }

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cua_harbor"]

[tool.hatch.build.targets.wheel.force-include]
"node/dist" = "cua_harbor/_node_dist"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
